facet-path/tests/snapshots/pretty_formatting__pretty_vec_index.snap
---
source: facet-path/tests/pretty_formatting.rs
expression: formatted
---
  × error at index
   ╭─[Item.rs:2:8]
 1 │ #[derive(Facet)]
 2 │ struct Item {
   ·        ────
 3 │     id: u32,
   ·     ─┬
   ·      ╰── as requested here
 4 │ }
   ╰────
  help: check your data

Error: 
  × in type `Container`
   ╭─[Container.rs:2:8]
 1 │ #[derive(Facet)]
 2 │ struct Container {
   ·        ─────────
 3 │     items: Vec<Item>,
   ·     ──┬──
   ·       ╰── via this field
 4 │ }
   ╰────
